# intro-to-crypto

./: README.md  des.py
Chapter 1 Introduction to Cryptography and Data Security/: ancient.py  intro-to-crypto.ipynb
Chapter 2  Stream Ciphers/: lfsr.py  stream-ciphers.ipynb
Chapter 3 The Data Encryption Standard (DES) and Alternatives/: des.ipynb
Chapter 4 The Advanced Encryption Standard (AES)/: aes.ipynb  polynomial.py  polynomial_test.py  pyproject.toml
Chapter 6  Introduction to Public-Key Cryptography/: 6 - Notes.md  6 - Solutions.ipynb  pyproject.toml
aes/: pyproject.toml
aes/aes/: __init__.py  aes.py  counter.py  modes.py  padder.py  utils.py
aes/tests/: test_aes.py  test_modes.py  test_padder.py
