[tool.poetry]
name = "chapter 4 the advanced encryption standard (aes)"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
tabulate = "^0.9.0"
pytest = "^7.3.1"
hypothesis = "^6.72.2"
aes = { path = "../aes/", develop = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
