[tool.poetry]
name = "chapter 6  introduction to public-key cryptography"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chapter 6  introduction to public_key cryptography"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
humanize = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
