[tool.poetry]
name = "aes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
hypothesis = "^6.72.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
